--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.12.0",
+    "@types/mailchimp__mailchimp_marketing": "^3.0.21",
     "@types/nodemailer": "^6.4.16",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
