--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "@remix-run/node": "^2.12.0",
     "@remix-run/react": "^2.12.0",
     "@remix-run/serve": "^2.12.0",
-    "@vercel/analytics": "^1.5.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "isbot": "^4.1.0",
     "lucide-react": "^0.441.0",
     "motion": "^12.16.0",
+    "next-images": "^1.8.5",
     "nodemailer": "^6.9.15",
     "react": "^18.2.0",
     "react-cookie-consent": "^9.0.0",
