--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@remix-run/node": "^2.12.0",
     "@remix-run/react": "^2.12.0",
     "@remix-run/serve": "^2.12.0",
+    "@tabler/icons-react": "^3.35.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "isbot": "^4.1.0",
     "lucide-react": "^0.441.0",
     "motion": "^12.16.0",
