--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lucide-react": "^0.441.0",
     "motion": "^12.16.0",
     "next-images": "^1.8.5",
-    "nodemailer": "^6.9.15",
+    "nodemailer": "^7.0.12",
     "react": "^18.2.0",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.2.0",
@@ -47,6 +47,7 @@
     "remix-utils": "^7.7.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "valibot": "^1.2.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
